changed responsive design to get rid of horizontal scrolling issue

--- a/AssignmentCSS.css
+++ b/AssignmentCSS.css
@@ -91,37 +91,6 @@ img:hover {
     width: 100%;
     background-color: beige;
 }
-@media only screen and (max-width: 400px) {
-    body {
-        width: 100%;
-        }
-    header {
-        width: 100%;
-    }
-}
-@media screen and (min-width: 401px) and (max-width: 700px) {
-    body {
-        width: 100%;
-    }
-    header {
-        width: 100%;
-    }
-}
-@media screen and (min-width: 701px) and (max-width: 1200px) {
-    body {
-        width: 900px;
-        margin-left: auto;
-        margin-right: auto;
-        }
-    #form {
-        margin-left: auto;
-        margin-right: auto;
-    }
-    header {
-        width: 100%;
-    }
-    
-}
 @media screen and (max-width: 700px) {
     #centralGrid {
         grid-template-rows: 4fr; 
